[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "libparsec_platform_mountpoint"
publish.workspace = true
repository.workspace = true
version.workspace = true
autoexamples = false

[[example]]
name = "minimal_mountpoint"
path = "examples/minimal.rs"

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
winfsp_wrs = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
# ABI 7.31 has been introduced in Linux 5.2 (2019-06-08), should be old enough
# to be supported everywhere.
# See:
# - https://github.com/torvalds/linux/blob/e32cde8d2bd7d251a8f9b434143977ddf13dcec6/include/uapi/linux/fuse.h#L234-L258
# - https://github.com/libfuse/libfuse/blob/2aeef499b84b596608181f9b48d589c4f8ffe24a/include/fuse_lowlevel.h#L16-L18
fuser = { workspace = true, features = ["libfuse", "abi-7-31"] }
libc = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dependencies]
libparsec_client = { workspace = true }
libparsec_types = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
ctrlc = { workspace = true, features = ["termination"] }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
# `termination` feature enable handling of SIGHUP/SIGTERM on top of SIGINT
env_logger = { workspace = true }
libparsec_client_connection = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
libparsec_tests_lite = { workspace = true }
windows-sys = { workspace = true, features = ["Win32"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp_wrs_build = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = { workspace = true }
