[package]
name = "libparsec_platform_pki"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
error_set = { workspace = true }
rustls-webpki = { workspace = true, features = ["std", "ring"] }
rustls-pki-types = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
libparsec_types = { workspace = true }
# Use to decode subject & issuer fields of used x509 certificate.
x509-cert = { workspace = true, features = ["std"] }
log = { workspace = true, features = ["kv"] }
chrono = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
schannel = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Security_Cryptography_UI"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
cryptoki = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
# We use clap to provide a CLI for examples.
clap = { workspace = true, default-features = true, features = ["env", "derive"] }
# We use some hex encoding in the crate's examples
data-encoding = { workspace = true, default-features = true }
anyhow = { workspace = true }
env_logger = { workspace = true, features = ["kv"] }
hex-literal = { workspace = true }
