[package]
name = "libparsec_platform_pki"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-fixture = ["libparsec_tests_lite"]
test-with-testbed = ["libparsec_testbed"]
force-scws-on-native = []  # Only used to test SCWS

[dependencies]
bytes = { workspace = true }
error_set = { workspace = true }
rustls-webpki = { workspace = true, features = ["std", "ring"] }
rustls-pki-types = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
sha2 = { workspace = true }
libparsec_types = { workspace = true }
# Use to decode subject & issuer fields of used x509 certificate.
x509-cert = { workspace = true, features = ["std"] }
log = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

libparsec_tests_lite = { workspace = true, optional = true }
libparsec_testbed = { workspace = true, optional = true }
libparsec_platform_http_proxy = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
schannel = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Security_Cryptography_UI"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
cryptoki = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
# We use clap to provide a CLI for examples.
clap = { workspace = true, default-features = true, features = ["env", "derive"] }
# We use some hex encoding in the crate's examples
data-encoding = { workspace = true, default-features = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
hex-literal = { workspace = true }
libparsec_tests_lite = { workspace = true, features = ["parsec_test_macro"] }
# Note `libparsec_tests_fixtures` enables our `test-with-testbed` feature
libparsec_tests_fixtures = { workspace = true, default-features = false, features = [
    "test-with-platform-pki-testbed",
] }
serde = { workspace = true }
rmp-serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
