[package]
name = "libparsec_platform_realm_export"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
libparsec_types = { workspace = true }
libparsec_platform_async = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs", "sync"] }
# We add this dependency to have sqlite3 bundled into our code.
libsqlite3-sys = { workspace = true, features = ["bundled"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros"] }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
